﻿Subtitle Edit Changelog


3.5.3 (xth May 2017) BETA
* NEW:
   * New Netflix quality checker - thx askolesov/pavel-belenko
   * Added optional list view column "Actor" for ASS/SSA - thx william
* IMPROVED:
   * Updated Chinese translation - thx Leon
   * Updated French translation - thx JM GBT
   * Updated Russian translation - thx Elheym
   * Updated Finnish translation - thx Teijo S.
   * Updated Polish translation - thx admas
   * Import plain text now also supports input as HTML
   * Added "Total words" to statistics - thx Barbara
   * Added more Tesseract dictionaries - thx lucybook/Elheym
   * Added "Video auto-load" to UI settings - thx mtarini
   * "names_etc.xml" renamed to "names.xml" + local dictionaries
     now has a "blacklist" - thx ivandrofly
   * Some position support for WebVTT
   * In "Change casing" it's now possible to add extra names
   * Export image margins are now percentage - thx aaaxx/gorgorias
   * Added "Clear shortcut" button to settings - thx Simon
* FIXED:
   * Fixed crash in "Add to user dictionary" in OCR - thx alfix0
   * Fixed original file name bug in "Undo" - thx darnn
   * Fixed non default timecode scales in MKV - thx mkver
   * Fix layout of translator mode in RTL mode - thx darnn
   * Fixed possible crash in "CleanAutoBackupFolder" - thx kaser2010
   * Fix missing UTF-8 tag in OCR HTML export - thx dgonyier
   * Fixed issue regarding "Fix dialogs on one line" - thx ingo
   * Fixed possible crash in EBU STL - thx Elena
   * Video player "Stop" resets playback position - thx askolesov/pavel-belenko
   * Many fixes for TTML 1.0 and Netflix Timed Text - thx askolesov/pavel-belenko
   * Fixed locking of input subtitle file (for unknown subtitles) - thx darnn
   * Fixed crash after unsuccessful load of subtitle file - thx darnn
   * Fixed possible crash in "Batch convert" - thx FreezinG117
   * Fixed issue with the German open quotation mark - thx Ninelpienel
   * Fixed bug in "Reverse RTL start/end" - thx darnn