@@ -5,6 +5,7 @@
 * NEW:
    * New Netflix quality checker - thx askolesov/pavel-belenko
    * Added optional list view column "Actor" for ASS/SSA - thx william
+   * Added new subtitle format - thx Merwyn
 * IMPROVED:
    * Updated Chinese translation - thx Leon
    * Updated French translation - thx JM GBT
